--- a/test/build.gradle
+++ b/test/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "25.0.1"
 
     defaultConfig {
-        applicationId "com.jack.main"
+        applicationId "com.example.myapplication"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
@@ -23,21 +23,12 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:23.4.0'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:design:23+'
-    compile 'com.jakewharton:butterknife:7.0.0'
-    compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
-    //Retrofit2所需要的包
-    compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
-    //ConverterFactory的Gson依赖包
-    compile 'com.squareup.retrofit2:converter-scalars:2.0.0-beta4'
-    //ConverterFactory的String依赖包
-    compile 'com.google.code.gson:gson:2.8.0'
-    compile 'com.github.bumptech.glide:glide:3.5.2'
-    compile 'com.jcodecraeer:xrecyclerview:1.3.2'
+    compile 'com.jakewharton:butterknife:+'
 }
