--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.jack.mymy.NewDatailsActivity"></activity>
+        <activity android:name="com.jack.mymy.NewDatailsActivity" />
+        <activity android:name="com.jack.mymy.GanHuoDatailsActivity"></activity>
     </application>
 
 </manifest>
