--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,16 +31,18 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:design:23+'
     compile 'com.jakewharton:butterknife:7.0.0'
-    compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
-    //Retrofit2所需要的包
-    compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
-    //ConverterFactory的Gson依赖包
-    compile 'com.squareup.retrofit2:converter-scalars:2.0.0-beta4'
     //ConverterFactory的String依赖包
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.github.bumptech.glide:glide:3.5.2'
     compile 'com.jcodecraeer:xrecyclerview:1.3.2'
     compile 'com.android.support:cardview-v7:23.0.+'
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
+    //RxJava+Retrofit+gson 结合所需的包
+    compile 'com.squareup.retrofit2:retrofit:2.0.2'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.2'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.2'
+    compile 'com.squareup.retrofit2:converter-scalars:2.0.0-beta4'
+    compile 'io.reactivex:rxjava:1.1.5'
+    compile 'io.reactivex:rxandroid:1.2.0'
 
 }
