--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,17 +1,26 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 24
     buildToolsVersion "25.0.1"
 
     defaultConfig {
         applicationId "com.jack.main"
         minSdkVersion 15
-        targetSdkVersion 23
+        targetSdkVersion 24
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        //启用renderscript
+        renderscriptTargetApi = 24
+        renderscriptSupportModeEnabled = true
+        ndk {
+            abiFilters "armeabi", "armeabi-v7a", "x86", "mips"
+        }
+        buildConfigField("String", "GanHuoBaseUrl", "\"${GanHuoBaseUrl}\"")
+        buildConfigField("String", "ZhiHuBaseUrl", "\"${ZhiHuBaseUrl}\"")
+        println("GanHuoBaseUrl"+"\"${GanHuoBaseUrl}\"");
+        println("ZhiHuBaseUrl"+"\"${ZhiHuBaseUrl}\"");
 
     }
     buildTypes {
@@ -27,15 +36,17 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:23.4.0'
+
+    compile 'com.android.support:recyclerview-v7:24.2.0'
+    compile 'com.android.support:appcompat-v7:24+'
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:design:23+'
+    compile 'com.android.support:design:24+'
     compile 'com.jakewharton:butterknife:7.0.0'
     //ConverterFactory的String依赖包
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.github.bumptech.glide:glide:3.5.2'
     compile 'com.jcodecraeer:xrecyclerview:1.3.2'
-    compile 'com.android.support:cardview-v7:23.0.+'
+    compile 'com.android.support:cardview-v7:24.2.0'
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
     //RxJava+Retrofit+gson 结合所需的包
     compile 'com.squareup.retrofit2:retrofit:2.0.2'
@@ -44,5 +55,7 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-scalars:2.0.0-beta4'
     compile 'io.reactivex:rxjava:1.1.5'
     compile 'io.reactivex:rxandroid:1.2.0'
+    compile 'com.github.jrvansuita:GaussianBlur:v1.0.2'
+
 
 }
